--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  go_router: ^13.2.4
 
 flutter:
   uses-material-design: true
