--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   go_router: ^13.2.4
 
 dev_dependencies:
+  animate_do: ^3.3.4
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
